feat(webui): Set `font-family` to `--font-manrope`

--- a/webui/app/src/app.css
+++ b/webui/app/src/app.css
@@ -21,6 +21,8 @@
 body {
   background: rgb(var(--background-rgb));
   color: rgb(var(--foreground-rgb));
+
+  font-family: var(--font-manrope);
 }
 
 /* Custom TOM Select theming */
